2009-09-07 Magnus Hagdorn
 * libglimmer/glimmer_vers.F90.in.in: version numbers are no longer stored in
   a module, but accessed through accessors to avoid unnessary recompilations
 * libglide/glide.F90: call new accessor to get version
 * libglide/glimmer_ncparams.F90: ditto
 * libglimmer/Makefile.am: pass top source directory to version script
 * libglimmer/createSVNVersion.sh: run svnversion on top source dir
 * libglimmer/glimmer_global.F90: do not load version numbers

2009-09-07 Magnus Hagdorn
 * doc/common/Makefile.am: forgot to distribute file
 * doc/num/figs/Makefile.am: ditto
 * doc/ug/varlist.tex: include list of variables

2009-09-07 Magnus Hagdorn
 * Makefile.am: forgot sub directory
 * configure.in: rename package to glimmer-cism
 * doc/Makefile.am: do not distribute generated docs
 * doc/dg/figures/Makefile.am: do not distribute images
 * doc/num/figs/Makefile.am: ditto
 * doc/num/gnu/Makefile.am: ditto
 * doc/ug/figs/Makefile.am: ditto
 * doc/ug/Makefile.am: fix paths
 * example-drivers/glint/src/Makefile.am: fix bug
 * tests/exact-isothermal/src/Makefile.am:  rename installation directory

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * libglint/Makefile.am: forgot a file
 * add glint examples

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * EISMINT-3/src/Makefile.am: link to the correct libs
 * add libglint and EISMINT3 examples

2009-09-04 Magnus Hagdorn
 * added EISMINT-3 greenland example

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * libglimmer/Makefile.am: forgot a file
 * add eis driver and example setups

2009-09-04 Magnus Hagdorn
 * Makefile.am: distribute new file
 * configure.in: handle new directories
 * tests/Makefile.am: ditto
 * add EISMINT 1 and 2 tests

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: create new Makefiles
