@@ -1,3 +1,6 @@
+2009-09-08 Magnus Hagdorn
+ * libglimmer/glimmer_vers.F90.in.in: fix fortran error
+
 2009-09-07 Magnus Hagdorn
  * libglimmer/glimmer_vers.F90.in.in: version numbers are no longer stored in
    a module, but accessed through accessors to avoid unnessary recompilations
